# qwt3d-examples

./: CMakeLists.txt  README.md
qwt3d/: qwt3d_types.h
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/widgets/: mainpanel.cpp  mainpanel.h
src/widgets/examples/autoswitch/: autoswitch.cpp  autoswitch.h
src/widgets/examples/dynamicplot/: dynamicplot.cpp  dynamicplot.h
src/widgets/examples/freemesh/: femreader.h  freemesh.cpp  freemesh.h
src/widgets/examples/graph/: graph.cpp  graph.h
src/widgets/examples/simpleplot/: simpleplot.cpp  simpleplot.h
src/widgets/examples/volumeplot/: readme.txt  volumeplot.cpp  volumeplot.h
